Изменение в ключах в INSERT- запросе

--- a/query_db.ipynb
+++ b/query_db.ipynb
@@ -114,24 +114,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('TATTOOED ON MY HEART',), ('MY SHINE',)]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('TATTOOED ON MY HEART',), ('MY SHINE',)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(connection.execute(\"\"\"SELECT track_name FROM track\n",
+    "connection.execute(\"\"\"SELECT track_name FROM track\n",
     "WHERE track_name \n",
     "iLIKE '%%my%%'\n",
     "\n",
-    ";\"\"\").fetchall())"
+    ";\"\"\").fetchall()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('foreignbard', 1),\n",
+       " ('rnb', 1),\n",
+       " ('rusestrada', 2),\n",
+       " ('ruspop', 1),\n",
+       " ('rusrock', 2),\n",
+       " ('indie', 1)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT genre_name, COUNT(id_executor) FROM genre g\n",
+    "JOIN executorgenre exg ON g.id_genre = exg.id_genre\n",
+    "GROUP BY g.genre_name \n",
+    ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Аллилуия', 13),\n",
+       " ('La Vida Cosmopolita', 11),\n",
+       " ('CHAMPION', 10),\n",
+       " ('What a Time To Be Alive', 6)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT album_name, COUNT(id_track) FROM album a\n",
+    "JOIN track t ON a.id_album = t.id_album\n",
+    "WHERE release_year BETWEEN 2019 AND 2020\n",
+    "GROUP BY a.album_name\n",
+    "ORDER BY COUNT(id_track) DESC\n",
+    ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Мне только снится жизнь моя', Decimal('302899.333333333333')),\n",
+       " ('Аллилуия', Decimal('271736.153846153846')),\n",
+       " ('La Vida Cosmopolita', Decimal('219994.545454545455')),\n",
+       " ('What a Time To Be Alive', Decimal('210938.333333333333')),\n",
+       " ('Blessings - EP', Decimal('200195.000000000000')),\n",
+       " ('Village', Decimal('195100.000000000000')),\n",
+       " ('CHAMPION', Decimal('172099.000000000000')),\n",
+       " ('Золотая коллекция', Decimal('169780.434782608696')),\n",
+       " ('The End', Decimal('138258.750000000000'))]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT album_name, AVG(duration) FROM album a\n",
+    "JOIN track t ON a.id_album = t.id_album\n",
+    "GROUP BY a.album_name\n",
+    "ORDER BY AVG(duration) DESC\n",
+    ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Bishop Briggs',),\n",
+       " ('Jacob Banks',),\n",
+       " ('Tom Walker',),\n",
+       " ('Константин Никольский',),\n",
+       " ('Люся Чеботина',),\n",
+       " ('Олег Анофриев',),\n",
+       " ('Орден Славы',)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT alias FROM executor e\n",
+    "JOIN executoralbum exa ON e.id_executor = exa.id_executor\n",
+    "JOIN album a ON exa.id_album = a.id_album\n",
+    "WHERE a.release_year != 2020\n",
+    "GROUP BY alias\n",
+    "ORDER BY alias\n",
+    ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Весна 2018', 'А сердце так стучит...'),\n",
+       " ('Весна 2018', 'Песенка почтальона'),\n",
+       " ('Весна 2018', 'Всё было (И солнце всходило)'),\n",
+       " ('Сборка TOP', 'Мы сдадим последние экзамены'),\n",
+       " ('Сборка TOP', 'Бежит, бежит машина'),\n",
+       " ('Сборка TOP', 'Это было недавно'),\n",
+       " ('Лучшие новинки', 'На лесной просеке (Тер-ри-кон)'),\n",
+       " ('The Best 2020', 'Всё было (И солнце всходило)'),\n",
+       " ('Summer HITS 2020', 'Всё скорее'),\n",
+       " ('Happy New Year', 'Солдатское письмо'),\n",
+       " ('Happy New Year', 'Мы жили по соседству'),\n",
+       " ('Чего-то там...', 'В морозный вечер'),\n",
+       " ('Чего-то там...', 'На лесной просеке (Тер-ри-кон)')]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT name_collection, track_name FROM collection c\n",
+    "JOIN albumtrackcollection atc ON c.id_collection = atc.id_collection\n",
+    "JOIN track t ON t.id_track = atc.id_track\n",
+    "JOIN album a ON a.id_album = t.id_album\n",
+    "JOIN executoralbum exa ON a.id_album = exa.id_album\n",
+    "JOIN executor e ON exa.id_executor = e.id_executor\n",
+    "WHERE e.executor_name = 'Олег'\n",
+    ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
