Обновление Запроса с последним ДЗ в БД

--- a/query_db.ipynb
+++ b/query_db.ipynb
@@ -8,14 +8,14 @@
    "source": [
     "import sqlalchemy\n",
     "\n",
-    "db = 'postgresql://music:Start123@localhost:5433/music'\n",
+    "db = 'postgresql://music:Start123@localhost:5432/music'\n",
     "engine = sqlalchemy.create_engine(db)\n",
     "connection = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +137,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. количество исполнителей в каждом жанре"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -165,6 +172,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. количество треков, вошедших в альбомы 2019-2020 годов"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -190,6 +204,13 @@
     "GROUP BY a.album_name\n",
     "ORDER BY COUNT(id_track) DESC\n",
     ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.средняя продолжительность треков по каждому альбому"
    ]
   },
   {
@@ -225,6 +246,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. все исполнители, которые не выпустили альбомы в 2020 году"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -257,8 +285,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. названия сборников, в которых присутствует конкретный исполнитель (выберите сами)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +314,7 @@
        " ('Чего-то там...', 'На лесной просеке (Тер-ри-кон)')]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,11 +331,205 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "6. название альбомов, в которых присутствуют исполнители более 1 жанра"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Аллилуия',),\n",
+       " ('CHAMPION',),\n",
+       " ('Village',),\n",
+       " ('La Vida Cosmopolita',),\n",
+       " ('Золотая коллекция',),\n",
+       " ('The End',),\n",
+       " ('Мне только снится жизнь моя',),\n",
+       " ('Blessings - EP',)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT album_name FROM album a\n",
+    "JOIN executoralbum exa ON a.id_album = exa.id_album\n",
+    "JOIN executor e ON exa.id_executor = e.id_executor\n",
+    "JOIN executorgenre exg ON e.id_executor = exg.id_executor\n",
+    "GROUP BY album_name\n",
+    "HAVING COUNT(exg.id_executor) >= 1\n",
+    ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. наименование треков, которые не входят в сборники"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Your Kiss',),\n",
+       " ('Чудное мгновенье 2',),\n",
+       " ('SOMEONE ELSE',),\n",
+       " ('1915',),\n",
+       " ('Just a Rainy Day',),\n",
+       " ('К ангелам',),\n",
+       " ('Кровавая река',),\n",
+       " ('WILD',),\n",
+       " ('Звезда небосвода',),\n",
+       " ('Funky Cha',),\n",
+       " ('Колыбельная',),\n",
+       " ('JEKYLL & HIDE',),\n",
+       " ('Палуба',),\n",
+       " ('Sólo por Ti Regresaré',),\n",
+       " ('Дороги',),\n",
+       " ('Песня о друге',),\n",
+       " ('Chainsmoking',),\n",
+       " ('Мой друг художник и поэт',),\n",
+       " ('TATTOOED ON MY HEART',),\n",
+       " ('I STILL LOVE YOU',),\n",
+       " ('Песенка шофёра',),\n",
+       " ('I TRIED',),\n",
+       " ('Ella',),\n",
+       " ('Поэт и правитель',),\n",
+       " ('Есть только миг',),\n",
+       " ('LONELY',),\n",
+       " ('Not Giving In',),\n",
+       " ('Blessings',),\n",
+       " ('Just You and I',),\n",
+       " ('Песенка ни о чём',),\n",
+       " ('MY SHINE',),\n",
+       " ('Rapture',),\n",
+       " ('CAN YOU HEAR ME NOW?',),\n",
+       " ('Прошедший день',),\n",
+       " ('Ночная птица',),\n",
+       " ('Солнце Монако',),\n",
+       " ('Soundtrack',),\n",
+       " ('Если я стану рыбой',),\n",
+       " ('Play Dead',),\n",
+       " ('Растаяла дымка сквозная',),\n",
+       " ('Sobreviviré',),\n",
+       " ('Песенка о робинзонах',),\n",
+       " ('CHAMPION',),\n",
+       " ('Karma',),\n",
+       " ('Я сам из тех',),\n",
+       " ('Чудное мгновенье',),\n",
+       " ('Футбольный мяч',),\n",
+       " ('О2',),\n",
+       " ('Награда',),\n",
+       " ('Герои',),\n",
+       " ('Зеркало мира',),\n",
+       " ('Аэлита',),\n",
+       " ('Море',),\n",
+       " ('Плохие люди',),\n",
+       " ('Я бреду по бездорожью',),\n",
+       " ('Весенняя песенка',),\n",
+       " ('Дети сидят в интернете',),\n",
+       " ('Без цели и без расчета',),\n",
+       " ('Viva la Noche en New York',),\n",
+       " ('Angels',),\n",
+       " ('Better Half of Me',),\n",
+       " ('Амур',),\n",
+       " ('Leave a Light On',),\n",
+       " ('Father is Near You',),\n",
+       " ('8',),\n",
+       " ('How Can You Sleep at Night?',)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT track_name FROM track t\n",
+    "LEFT JOIN albumtrackcollection atrc ON atrc.id_track = t.id_track\n",
+    "WHERE atrc.id_track IS NULL\n",
+    "GROUP BY track_name\n",
+    ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. исполнителя(-ей), написавшего самый короткий по продолжительности трек (теоретически таких треков может быть несколько)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Люся Чеботина', Decimal('60870'))]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT alias, duration FROM executor e\n",
+    "JOIN executoralbum ea ON e.id_executor = ea.id_executor\n",
+    "JOIN album a ON ea.id_album = a.id_album\n",
+    "JOIN track t ON a.id_album = t.id_album\n",
+    "WHERE duration = (SELECT MIN(duration) FROM track)\n",
+    "GROUP BY alias, t.duration\n",
+    "ORDER BY MIN(duration)\n",
+    ";\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. название альбомов, содержащих наименьшее количество треков"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Village', 1)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.execute(\"\"\"SELECT album_name, COUNT(id_track) FROM album a\n",
+    "JOIN track t ON a.id_album = t.id_album\n",
+    "GROUP BY album_name\n",
+    "ORDER BY COUNT(id_track)\n",
+    ";\"\"\").fetchone()"
+   ]
   }
  ],
  "metadata": {
