--- a/query_db.ipynb
+++ b/query_db.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlalchemy\n",
     "\n",
-    "db = 'postgresql://music:Start123@localhost:5432/music'\n",
+    "db = 'postgresql://music:Start123@localhost:5433/music'\n",
     "engine = sqlalchemy.create_engine(db)\n",
     "connection = engine.connect()"
    ]
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -269,18 +269,20 @@
        " ('Орден Славы',)]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "connection.execute(\"\"\"SELECT alias FROM executor e\n",
-    "JOIN executoralbum exa ON e.id_executor = exa.id_executor\n",
-    "JOIN album a ON exa.id_album = a.id_album\n",
-    "WHERE a.release_year != 2020\n",
-    "GROUP BY alias\n",
-    "ORDER BY alias\n",
+    "connection.execute(\"\"\"SELECT DISTINCT alias FROM executor e\n",
+    "    WHERE alias NOT IN (\n",
+    "        SELECT DISTINCT alias FROM executor e\n",
+    "        LEFT JOIN executoralbum exa ON e.id_executor = exa.id_executor\n",
+    "        LEFT JOIN album a ON exa.id_album = a.id_album\n",
+    "        WHERE a.release_year = 2020\n",
+    "    )\n",
+    "    ORDER BY alias\n",
     ";\"\"\").fetchall()"
    ]
   },
@@ -379,81 +381,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Your Kiss',),\n",
-       " ('Чудное мгновенье 2',),\n",
-       " ('SOMEONE ELSE',),\n",
-       " ('1915',),\n",
-       " ('Just a Rainy Day',),\n",
-       " ('К ангелам',),\n",
-       " ('Кровавая река',),\n",
-       " ('WILD',),\n",
-       " ('Звезда небосвода',),\n",
-       " ('Funky Cha',),\n",
-       " ('Колыбельная',),\n",
-       " ('JEKYLL & HIDE',),\n",
-       " ('Палуба',),\n",
-       " ('Sólo por Ti Regresaré',),\n",
-       " ('Дороги',),\n",
-       " ('Песня о друге',),\n",
-       " ('Chainsmoking',),\n",
-       " ('Мой друг художник и поэт',),\n",
-       " ('TATTOOED ON MY HEART',),\n",
-       " ('I STILL LOVE YOU',),\n",
-       " ('Песенка шофёра',),\n",
-       " ('I TRIED',),\n",
-       " ('Ella',),\n",
-       " ('Поэт и правитель',),\n",
-       " ('Есть только миг',),\n",
-       " ('LONELY',),\n",
-       " ('Not Giving In',),\n",
-       " ('Blessings',),\n",
-       " ('Just You and I',),\n",
+       "[('Песенка шофёра',),\n",
        " ('Песенка ни о чём',),\n",
-       " ('MY SHINE',),\n",
-       " ('Rapture',),\n",
-       " ('CAN YOU HEAR ME NOW?',),\n",
-       " ('Прошедший день',),\n",
-       " ('Ночная птица',),\n",
-       " ('Солнце Монако',),\n",
-       " ('Soundtrack',),\n",
-       " ('Если я стану рыбой',),\n",
-       " ('Play Dead',),\n",
-       " ('Растаяла дымка сквозная',),\n",
-       " ('Sobreviviré',),\n",
-       " ('Песенка о робинзонах',),\n",
-       " ('CHAMPION',),\n",
-       " ('Karma',),\n",
-       " ('Я сам из тех',),\n",
-       " ('Чудное мгновенье',),\n",
+       " ('Есть только миг',),\n",
+       " ('Песня о друге',),\n",
+       " ('Дороги',),\n",
        " ('Футбольный мяч',),\n",
-       " ('О2',),\n",
-       " ('Награда',),\n",
-       " ('Герои',),\n",
-       " ('Зеркало мира',),\n",
+       " ('Палуба',),\n",
+       " ('Колыбельная',),\n",
        " ('Аэлита',),\n",
        " ('Море',),\n",
-       " ('Плохие люди',),\n",
-       " ('Я бреду по бездорожью',),\n",
        " ('Весенняя песенка',),\n",
-       " ('Дети сидят в интернете',),\n",
-       " ('Без цели и без расчета',),\n",
+       " ('Песенка о робинзонах',),\n",
+       " ('Funky Cha',),\n",
+       " ('Just a Rainy Day',),\n",
        " ('Viva la Noche en New York',),\n",
-       " ('Angels',),\n",
-       " ('Better Half of Me',),\n",
-       " ('Амур',),\n",
-       " ('Leave a Light On',),\n",
+       " ('Sólo por Ti Regresaré',),\n",
+       " ('Ella',),\n",
+       " ('Sobreviviré',),\n",
        " ('Father is Near You',),\n",
+       " ('Зеркало мира',),\n",
+       " ('Ночная птица',),\n",
+       " ('Мой друг художник и поэт',),\n",
+       " ('Я сам из тех',),\n",
+       " ('Прошедший день',),\n",
+       " ('Я бреду по бездорожью',),\n",
+       " ('Без цели и без расчета',),\n",
+       " ('Растаяла дымка сквозная',),\n",
+       " ('Герои',),\n",
+       " ('Кровавая река',),\n",
+       " ('К ангелам',),\n",
+       " ('1915',),\n",
+       " ('Чудное мгновенье',),\n",
+       " ('Чудное мгновенье 2',),\n",
+       " ('Дети сидят в интернете',),\n",
+       " ('Если я стану рыбой',),\n",
+       " ('Звезда небосвода',),\n",
+       " ('Поэт и правитель',),\n",
+       " ('Just You and I',),\n",
+       " ('Leave a Light On',),\n",
+       " ('Better Half of Me',),\n",
+       " ('Not Giving In',),\n",
+       " ('How Can You Sleep at Night?',),\n",
+       " ('Angels',),\n",
+       " ('Blessings',),\n",
+       " ('Karma',),\n",
+       " ('Rapture',),\n",
+       " ('Play Dead',),\n",
+       " ('Chainsmoking',),\n",
+       " ('I STILL LOVE YOU',),\n",
+       " ('CAN YOU HEAR ME NOW?',),\n",
+       " ('CHAMPION',),\n",
+       " ('TATTOOED ON MY HEART',),\n",
+       " ('SOMEONE ELSE',),\n",
+       " ('JEKYLL & HIDE',),\n",
+       " ('LONELY',),\n",
+       " ('WILD',),\n",
+       " ('MY SHINE',),\n",
+       " ('I TRIED',),\n",
+       " ('Солнце Монако',),\n",
+       " ('Амур',),\n",
        " ('8',),\n",
-       " ('How Can You Sleep at Night?',)]"
+       " ('Your Kiss',),\n",
+       " ('Награда',),\n",
+       " ('О2',),\n",
+       " ('Плохие люди',),\n",
+       " ('Soundtrack',)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +464,7 @@
     "connection.execute(\"\"\"SELECT track_name FROM track t\n",
     "LEFT JOIN albumtrackcollection atrc ON atrc.id_track = t.id_track\n",
     "WHERE atrc.id_track IS NULL\n",
-    "GROUP BY track_name\n",
+    "\n",
     ";\"\"\").fetchall()"
    ]
   },
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +486,7 @@
        "[('Люся Чеботина', Decimal('60870'))]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +498,7 @@
     "JOIN track t ON a.id_album = t.id_album\n",
     "WHERE duration = (SELECT MIN(duration) FROM track)\n",
     "GROUP BY alias, t.duration\n",
-    "ORDER BY MIN(duration)\n",
+    "\n",
     ";\"\"\").fetchall()"
    ]
   },
@@ -509,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -518,16 +520,22 @@
        "('Village', 1)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "connection.execute(\"\"\"SELECT album_name, COUNT(id_track) FROM album a\n",
+    "connection.execute(\"\"\"SELECT album_name, COUNT(id_track) track_count FROM album a\n",
     "JOIN track t ON a.id_album = t.id_album\n",
     "GROUP BY album_name\n",
-    "ORDER BY COUNT(id_track)\n",
+    "HAVING COUNT(id_track) = (\n",
+    "    SELECT COUNT(id_track) FROM album a\n",
+    "    JOIN track t ON a.id_album = t.id_album\n",
+    "    GROUP BY album_name\n",
+    "    ORDER BY COUNT(id_track)\n",
+    "    LIMIT 1\n",
+    ")\n",
     ";\"\"\").fetchone()"
    ]
   }
